tests/baselines/reference/templateStringInFunctionParameterType.errors.txt
templateStringInFunctionParameterType.ts(1,10): error TS7010: 'f', which lacks return-type annotation, implicitly has an 'any' return type.
templateStringInFunctionParameterType.ts(1,12): error TS7006: Parameter '(Missing)' implicitly has an 'any' type.
templateStringInFunctionParameterType.ts(1,12): error TS1003: Identifier expected.
templateStringInFunctionParameterType.ts(2,10): error TS7010: 'f', which lacks return-type annotation, implicitly has an 'any' return type.


==== templateStringInFunctionParameterType.ts (4 errors) ====
    function f(`hello`);
             ~
!!! error TS7010: 'f', which lacks return-type annotation, implicitly has an 'any' return type.
               
!!! error TS7006: Parameter '(Missing)' implicitly has an 'any' type.
               ~~~~~~~
!!! error TS1003: Identifier expected.
    function f(x: string);
             ~
!!! error TS7010: 'f', which lacks return-type annotation, implicitly has an 'any' return type.
    function f(x: string) {
        return x;
    }